--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "seed": "node data/seed.js",
     "test": "jest",
     "start": "node data/seed.js && node server/index.js",
-    "localtest": "node data/seed.js && node server/index.js"
+    "localtest": "node data/seed.js && node server/index.js",
+    "faker": "node faker.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,9 +21,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.18.2",
     "eslint-plugin-jest": "^21.12.3",
+    "faker": "^4.1.0",
+    "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.6",
     "mysql": "^2.15.0",
+    "npm": "^5.7.1",
     "prop-types": "^15.6.1",
     "react": "^16.1.0",
     "react-bootstrap": "^0.32.1",
