--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.0.6",
     "mysql": "^2.15.0",
+    "newrelic": "^3.2.0",
     "npm": "^5.7.1",
+    "pm2": "^2.10.1",
     "prop-types": "^15.6.1",
     "react": "^16.1.0",
     "react-bootstrap": "^0.32.1",
@@ -38,6 +40,7 @@
     "react-native": "^0.53.3",
     "react-photo-gallery": "^6.0.22",
     "react-responsive-modal": "^2.0.1",
+    "redis": "^2.8.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
   },
@@ -61,7 +64,7 @@
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.2",
     "jest": "^22.4.2",
-    "nodemon": "^1.17.1",
+    "nodemon": "^1.17.2",
     "prettier-eslint": "^8.8.1",
     "react-test-renderer": "^16.2.0",
     "style-loader": "^0.20.2",
