--- a/artillery.yml
+++ b/artillery.yml
@@ -5,12 +5,12 @@ config:
     local:
   target: 'http://localhost:3001'
   phases:
-    - duration: 20
-      arrivalRate: 15
-    - duration: 40
-      arrivalRate: 5
     - duration: 60
       arrivalRate: 25
+    # - duration: 40
+    #   arrivalRate: 5
+    # - duration: 60
+    #   arrivalRate: 25
   defaults:
     headers:
 scenarios:
@@ -18,5 +18,5 @@ scenarios:
     flow:
       - loop:
         - get:
-            url: "/restaurants/{{$randomNumber(1,10000000)}}/gallery"
+            url: "/api/restaurants/{{$randomNumber(1,10000000)}}/gallery"
         count: 4
